--- a/client/bower.json
+++ b/client/bower.json
@@ -33,6 +33,7 @@
     "html5-boilerplate": "~4.3.0",
     "holderjs": "~2.4.1",
     "angular-strap": "~2.2.1",
-    "angular-bootstrap-calendar": "~0.9.2"
+    "angular-bootstrap-calendar": "~0.9.2",
+    "moment": "~2.10.6"
   }
 }
