--- a/app.yaml
+++ b/app.yaml
@@ -38,6 +38,11 @@ handlers:
 # This handler tells app engine how to route requests to a WSGI application.
 # The script value is in the format <path.to.module>.<wsgi_application>
 # where <wsgi_application> is a WSGI application object.
+
+- url: /s/wh/.*
+  script: webhookworkers.webhook
+  login: admin
+
 - url: /s/.*  # This regex directs all routes to main.bottle
   script: main.bottle
   secure: always
